--- a/BulkyWeb/Views/Category/Edit.cshtml
+++ b/BulkyWeb/Views/Category/Edit.cshtml
@@ -1,9 +1,10 @@
 ﻿@model Category
 
 <form method="post">
+    <input asp-for="Id" hidden />
     <div class="border p-3 mt-4">
            <div class="row pb-2">
-               <h2 class="text-primary">Create Category</h2>
+               <h2 class="text-primary">Edit Category</h2>
                </hr>
            </div>
            @* <div asp-validation-summary="None"></div> *@
@@ -20,7 +21,7 @@
 
            <div class="row">
                <div class="col-6">
-                   <button type="submit" class="btn btn-primary form-control">Create</button>
+                   <button type="submit" class="btn btn-primary form-control">Update</button>
            </div>
            <div class="col-6">
                 <a asp-controller="Category" asp-action="Index" class="btn btn-secondary border form-control">Back to List</a>
