--- a/BulkyWeb/Views/_ViewImports.cshtml
+++ b/BulkyWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using BulkyWeb
-@using Bulky.Models
+﻿@using BookBazaar
+@using BookBazaar.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
