--- a/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Product>
 
-<div class="card shadow border-0 mt-4">
+<div class="card shadow border-0 my-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
@@ -25,25 +25,16 @@
                         Title
                     </th>
                     <th>
-                        Description
-                    </th>
-                    <th>
                         Author
                     </th>
                     <th>
                         ISBN
                     </th>
                     <th>
-                        ListPrice
-                    </th>
-                    <th>
                         Price
                     </th>
                     <th>
-                        Price 50
-                    </th>
-                    <th>
-                        Price 100
+                        Category
                     </th>
                 </tr>
             </thead>
@@ -52,13 +43,10 @@
                 {
                     <tr>
                         <td>@obj.Title</td>
-                        <td>@obj.Description</td>
                         <td>@obj.Author</td>
                         <td>@obj.ISBN</td>
-                        <td>@obj.ListPrice</td>
                         <td>@obj.Price</td>
-                        <td>@obj.Price50</td>
-                        <td>@obj.Price100</td>
+                        <td>@obj.CategoryId</td>
                         <td>
                             <div class="w-75 btn-group" role="group">
                                 <a asp-controller="Product" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
