--- a/BulkyWeb/Areas/Admin/Views/Product/Create.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Create.cshtml
@@ -27,6 +27,14 @@
                     <span asp-validation-for="Author" class="text-danger"></span>
                 </div>
                 <div class="form-floating py-2 col-12">
+                    @*This line show EFCore projections with Viewbag. asp-items expects IEnumerable*@
+                    <select asp-for="CategoryId" asp-items="ViewBag.CategoryList" class="form-select border-0 shadow">
+                        <option value="">Select a Category</option>
+                    </select> 
+                    <label asp-for="CategoryId" class="ms-2">Category</label>
+                    <span asp-validation-for="CategoryId" class="text-danger"></span>
+                </div>
+                <div class="form-floating py-2 col-12">
                     <input asp-for="ISBN" class="form-control border-0 shadow" />
                     <label asp-for="ISBN" class="ms-2"></label>
                     <span asp-validation-for="ISBN" class="text-danger"></span>
