--- a/BulkyWeb/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using BookBazaar
 @using BookBazaar.Models
+@using BookBazaar.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
