--- a/BulkyWeb/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/BulkyWeb/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using BookBazaar.Areas.Identity
 @using BookBazaar.Areas.Identity.Pages
+@using BookBazaar.Models
+@using BookBazaar.Models.ViewModels
+@using BookBazaar.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
