--- a/BulkyWeb/Areas/Customer/Views/_ViewImports.cshtml
+++ b/BulkyWeb/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using BookBazaar
 @using BookBazaar.Models
 @using BookBazaar.Models.ViewModels
+@using BookBazaar.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
