--- a/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -11,7 +11,7 @@
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">
             <input asp-for="Product.Id" hidden/>
-            <input asp-for="Product.ImageUrl" hidden/>
+           @*  <input asp-for="Product.ImageUrl" hidden/> *@
             <div class="row">
                 <div class="col-10">
                     <div class="border p-3">
@@ -42,10 +42,10 @@
                             <label asp-for="Product.ISBN" class="ms-2"></label>
                             <span asp-validation-for="Product.ISBN" class="text-danger"></span>
                         </div>
-                        <div class="form-floating py-2 col-12">
+                        @* <div class="form-floating py-2 col-12">
                             <input type="file" name="file" class="form-control border-0 shadow" />
                             <label asp-for="Product.ImageUrl" class="ms-2"></label>
-                        </div>
+                        </div> *@
                         <div class="form-floating py-2 col-12">
                             <input asp-for="Product.ListPrice" class="form-control border-0 shadow" />
                             <label asp-for="Product.ListPrice" class="ms-2"></label>
@@ -83,9 +83,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2">
+               @*  <div class="col-2">
                     <img src="@Model.Product.ImageUrl" style="border-radius:5px; border: 1px solid #bbb9b9; width:100%;" alt="Book Image" />
-                </div>
+                </div> *@
             </div>
         </form>
     </div>
