--- a/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -10,8 +10,7 @@
     </div>
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">
-            <input asp-for="Product.Id" hidden/>
-           @*  <input asp-for="Product.ImageUrl" hidden/> *@
+            <input asp-for="Product.Id" hidden/>       
             <div class="row">
                 <div class="col-10">
                     <div class="border p-3">
@@ -42,10 +41,10 @@
                             <label asp-for="Product.ISBN" class="ms-2"></label>
                             <span asp-validation-for="Product.ISBN" class="text-danger"></span>
                         </div>
-                        @* <div class="form-floating py-2 col-12">
-                            <input type="file" name="file" class="form-control border-0 shadow" />
-                            <label asp-for="Product.ImageUrl" class="ms-2"></label>
-                        </div> *@
+                        <div class="form-floating py-2 col-12">
+                            <input type="file" name="files" class="form-control border-0 shadow" multiple />
+                            <label asp-for="Product.ProductImages" class="ms-2"></label>
+                        </div>
                         <div class="form-floating py-2 col-12">
                             <input asp-for="Product.ListPrice" class="form-control border-0 shadow" />
                             <label asp-for="Product.ListPrice" class="ms-2"></label>
