--- a/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -10,7 +10,7 @@
     </div>
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">
-            <input asp-for="Product.Id" hidden/>       
+            <input asp-for="Product.Id" hidden />
             <div class="row">
                 <div class="col-10">
                     <div class="border p-3">
@@ -82,9 +82,17 @@
                         </div>
                     </div>
                 </div>
-               @*  <div class="col-2">
-                    <img src="@Model.Product.ImageUrl" style="border-radius:5px; border: 1px solid #bbb9b9; width:100%;" alt="Book Image" />
-                </div> *@
+                <div class="col-2">
+                    @if (Model.Product.ProductImages != null)
+                    {
+                        foreach (var image in Model.Product.ProductImages)
+                        {
+                            <div class="border p-1 m-2 text-center">
+                                <img src="@image.ImageUrl" style="border-radius:5px; border: 1px solid #bbb9b9; width:100%;" alt="Book Image" />
+                            </div>
+                        }
+                    }
+                </div>
             </div>
         </form>
     </div>
@@ -94,13 +102,13 @@
     <partial name="_ValidationScriptsPartial" />
     <script>
         tinymce.init({
-          selector: 'textarea',
-          plugins: [
-            // Core editing features
-            'anchor', 'autolink', 'charmap', 'lists', 'visualblocks', 'wordcount',
-            'checklist', 'casechange', 'export', 'formatpainter', 'pageembed', 'a11ychecker', 'tinymcespellchecker', 'permanentpen', 'powerpaste', 'advtable', 'advcode', 'advtemplate', 'mentions', 'tableofcontents', 'footnotes', 'mergetags', 'autocorrect', 'typography', 'inlinecss', 'markdown',
-          ],
-          toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent'
+              selector: 'textarea',
+              plugins: [
+                    // Core editing features
+                    'anchor', 'autolink', 'charmap', 'lists', 'visualblocks', 'wordcount',
+                    'checklist', 'casechange', 'export', 'formatpainter', 'pageembed', 'a11ychecker', 'tinymcespellchecker', 'permanentpen', 'powerpaste', 'advtable', 'advcode', 'advtemplate', 'mentions', 'tableofcontents', 'footnotes', 'mergetags', 'autocorrect', 'typography', 'inlinecss', 'markdown',
+              ],
+              toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent'
         });
     </script>
 }
